[package]
name = "rusty_invaders"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
license = "BSD-3-Clause"
license_file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }